[package]
name = "Oxidisk"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
rfd = "0.17.2"
throbber-widgets-tui = "0.11.0"
windows = { version = "0.52", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_Imapi",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_System_Variant",
] }

